# tinyporto

./: .gitignore  COMPILER-NOTES.md  README.md
.codex/plans/: wyn-futhark-refactor.md
driver/: Cargo.toml  build.rs
driver/src/: app.rs  camera.rs  gfx.rs  graph.rs  main.rs  wync.rs
wyn/: bricks.wyn  camera.wyn  clouds.wyn  geom.wyn  grid.wyn  gtao.wyn  hiz.wyn  input.wyn  main.wyn  math.wyn  mesh.wyn  pack.wyn  paint.wyn  shade.wyn  shadow.wyn  walls.wyn  water.wyn
