[package]
name = "tinyporto-driver"
version = "0.1.0"
edition = "2021"
description = "Generic wgpu host that runs Wyn-compiled SPIR-V pipelines. Knows nothing about the game — all domain logic lives in the Wyn program."

[[bin]]
name = "tinyporto"
path = "src/main.rs"

[dependencies]
# `spirv` enables ShaderSource::SpirV (naga-validated SPIR-V ingest, cross-backend).
wgpu = { version = "27", features = ["spirv"] }
winit = "0.30"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
# Parse the wyn pipeline descriptor (.json) and codegen Rust from it.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"
